--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,10 @@
 <!--header-->
+<app-header></app-header>
 
 <!--Wrapper-->
-<router-outlet></router-outlet>
+<div class="wrapper">
+  <router-outlet></router-outlet>
+</div>
 
 <!--Footer-->
+<app-footer></app-footer>
