--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,7 +1,7 @@
 // Your global styles: imports, variables, etc.
 
 @import "./styles/variables.scss";
-// @import "./styles/theme-overrides.scss";
+@import "./styles/theme-overrides.scss";
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 
@@ -95,3 +95,5 @@ app-root {
   pointer-events: none;
   opacity: 0.5;
 }
+
+// 2:13:14
