feat: metodo para paginação

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -9,6 +9,11 @@
   </div>
 
   <!-- Paginator -->
-   
+  <p-paginator
+    [row]="rows"
+    [totalRecords]="totalRecords"
+    [rowsPerPageOptions]="[rowsPerPageOptions]"
+    (onPageChange)="onPageChange($event)"
+  >
+  </p-paginator>
 </div>
-
