feat: construindo o paginador

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -10,9 +10,9 @@
 
   <!-- Paginator -->
   <p-paginator
-    [row]="rows"
+    [rows]="5"
     [totalRecords]="totalRecords"
-    [rowsPerPageOptions]="[rowsPerPageOptions]"
+    [rowsPerPageOptions]="[5, 10, 20]"
     (onPageChange)="onPageChange($event)"
   >
   </p-paginator>
