feat: provide animation

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -10,11 +10,10 @@
 
   <!-- Paginator -->
   <p-paginator
-    [rows]="5"
+    [rows]="rows"
     [totalRecords]="totalRecords"
     [rowsPerPageOptions]="[5, 10, 20]"
     (onPageChange)="onPageChange($event)"
   >
   </p-paginator>
 </div>
-2:18:25
